# tiny-wasm-runtime

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
kernel/src/: CMakeLists.txt  buffer.c  buffer.h  cmd.c  error.h  memory.h  module.h  parse.c  parse.h  vector.h
kernel/test/: CMakeLists.txt
kernel/wasm/: add.wat  const.wasm  const.wat  if.wasm  local.wasm  local.wat
sample/: add.wat  call.wasm  call.wat  global.wasm  global.wat  if.wat  load_store.wasm  load_store.wat  loop.wasm  loop.wat  select_i32.wasm  select_i32.wat  select_t.wasm  select_t.wat  valid.wasm  valid.wat
src/: CMakeLists.txt  buffer.c  cmd.c  decode.c  decode.h  error.h  exception.h  exec.c  exec.h  list.c  list.h  memory.h  module.h  print.h  validate.c  validate.h  vector.c  vector.h
test/: CMakeLists.txt  runtest.c  select.2.wasm  spectest.wasm  spectest.wat
test/testsuite/: i32.wast
uefi/: Makefile  fread.c  hello.c
